assets/css/style.css
html {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    height: 100%;
    position: relative;
    
}

.container {
    max-width: 90vw;
    margin-top: 2vh;
}

nav a:hover {
    color: #7adef8 !important;
}

.navbar #navbarNav ul {
    text-align: center;
    font-variant: small-caps;
    font-weight: lighter;
}

.navbar-brand {
    padding: 0 !important;
    font-size: 1.75em;
    text-shadow:
    -0.5px -0.5px 0 #acacac,
    0.5px -0.5px 0 #5e5e5e,
    -0.5px 0.5px 0 #5e5e5e,
    0.5px 0.5px 0 #5e5e5e;
    
}

.navbar-toggler {
    border: none;
    outline: none !important;
    margin: 0 auto;
}

.navbar-toggler-icon:hover {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(122,222,248, 0.7)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

a:hover {
    text-decoration: none;
}

.btn-default {
    width: 100px;
    color: #f8f8f8;
    background-color: rgba(248, 148, 122);
    margin-bottom: 3%;
}

.btn-default:hover {
    color: #5e5e5e !important;
    background-color: rgba(248, 148, 122, 0.75);
 ;
}

.jumbotron p.name {
    font-weight: 200;
    font-size: 80px;
    font-variant: small-caps;
    line-height: 96px;
    padding-top: 10vh;
    color: rgba(43, 43, 43, 0.8);
}

.jumbotron p.heading {
    font-weight: 100;
    font-size: 40px;
    line-height: 60px;
    padding-top: 3vh;
    color: rgba(43, 43, 43, 0.8);
}

.home-page-bottom {
    text-align: center;
    padding-bottom: 5vh;
}

.down-arrow{
    position: absolute;
    bottom: 2vh;
    max-width: 100px;
    left: 50%;
    margin-left: -50px;
    animation: pulsate 3s ease-in-out;
    animation-iteration-count: infinite;
    -webkit-animation: pulsate 3s ease-in-out;
    -webkit-animation-iteration-count: infinite; 
    opacity: 0.3;
}

.down-arrow:hover {
    animation: pulsate 0s ease-in-out;
    animation-iteration-count: infinite;
    -webkit-animation: pulsate 0s ease-in-out;
    -webkit-animation-iteration-count: infinite; 
    opacity: 1;
}
.section {
    min-height: 100vh;
    padding-top: 60px;
}

.section#home{
    background-image: url("../images/js-bg2.png");
    background-size: cover;
}

.jumbotron {
    background: none
}

.section#portfolio {
    /* background: #7adef8; */
    padding-top: 54px;
}

.section#portfolio .container {
    width:100%;
    max-width:none;
    padding:0;
}

.section#profile {
    background-color: white;
}

.section#contact .container {
    max-width: 80vw;
}

#connect {
    text-align: center;
}

#linkedIn,
#resume,
#github
{
    height: 64px;
    margin: 2vh;
}

#portfolio a {
    color: rgba(245, 245, 245, 0.8);
}

#portfolio .container-fluid {
    max-width: 1920px;
}

#portfolio .container-fluid .portfolio-box {
    position: relative;
    display: block;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    height: 100%;
    position: absolute;
    bottom: 0;
    text-align: center;
    opacity: 0;
    color: #fff;
    background: rgba(248, 148, 122, 0.9);
    transition: opacity 0.25s ease;
    text-align: center;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption#blank {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    height: 100%;
    position: absolute;
    bottom: 0;
    text-align: center;
    opacity: 1;
    color: #fff;
    background: #7adef8;
    text-align: center;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category {
    font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    font-size: 1.3rem;
    font-weight: 600;
    text-transform: uppercase;
}  
#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category a {
    color: #0985a5 !important;
}
#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category a:hover {
    color: #0985a5;
    animation: pulsate 1s ease-in-out;
    animation-iteration-count: infinite;
    -webkit-animation: pulsate 1s ease-in-out;
    -webkit-animation-iteration-count: infinite; 
    opacity: 0.1;
}

#portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name {
    font-size: 2rem;
}

#portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption {
    opacity: 1;
}


.footer {
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    padding-top: 5vh;
    padding-bottom: 5vh;
    background: #7adef8 !important;
}

footer img {
    max-width: 100px;
    height: auto;
}

@media screen and (max-height: 450px) {
    .down-arrow{
        visibility: hidden;
    }
}

@media screen and (max-width: 575.98px) {
    #portfolio .container-fluid .portfolio-box img {
        border: 0.5px solid white;
    }
    .down-arrow{
        position: absolute;
        bottom: 2vh;
        max-width: 50px;
        left: 50%;
        margin-left: -25px;
    }
    
}

@media screen and (max-width: 767.98px) {
    .jumbotron p.name { 
        font-size: 3.5rem;
    }
    .jumbotron p.heading { 
        font-size: 1.75rem;
        line-height: 2rem;
        padding-top: 0;
    }
    
}
@media screen and (min-width: 768px) {
    .jumbotron p.name { font-size: 5rem; }
    .jumbotron p.heading { 
        font-size: 2rem;
        padding-top: 0;
    }
    /* #portfolio .container-fluid .portfolio-box .portfolio-box-caption#blank
    {
        opacity: 1;
        background: #7adef8;
    } */
}

@media screen and (max-width: 991.98px) {
    
    #portfolio .container-fluid .portfolio-box .portfolio-box-caption,
    #portfolio .container-fluid .portfolio-box .portfolio-box-caption#blank
     {
        opacity: 1;
        max-height: 80px;
        bottom: 7vh;
    }
    #portfolio .container-fluid .portfolio-box .portfolio-box-caption#blank
     {
        opacity: 1;
        max-height: 80px;
        bottom: 7vh;
        background: #f9a792;
    }
    
    #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category {
        font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
        font-size: 1rem;
        font-weight: 600;
        text-transform: uppercase;
    }  
    #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name {
        font-size: 1.5rem;
    }
}

@media screen and (min-width: 992px) {
    .jumbotron p.name { font-size: 7rem; }
    .jumbotron p.heading { 
        font-size: 3rem; 
        padding-top: 3vh;
    }
}
@media screen and (max-width: 1199.98px) {
    .section#portfolio {
        background: none;
    }
}

@keyframes pulsate {
    0% { 
        opacity: 0.5;
    }
    50% { 
        opacity: 1.0;
    }
    100% { 
        opacity: 0.5;
    }
}

